[project]
name = "pose"
version = "0.1.0"
description = ""
authors = [
    {name = "jonas"}
]
requires-python = ">=3.9,<=3.12"
dependencies = [
    "mediapipe (>=0.10.35,<0.11.0)",
    "google (>=3.0.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
